--- a/history/tennis-for-two.html
+++ b/history/tennis-for-two.html
@@ -150,7 +150,7 @@
     <section class="footer">
         <div class="item-foot">
             <div class="social">
-                VK
+                <a href="https://vk.com/golovina_wp" target="_blank"><i class='bx bxl-vk'></i></a>
                 <a href="https://t.me/golovina_wp_channel" target="_blank"><i class="bx bxl-telegram"></i></a>
                 <a href="mailto:golovina-wp@yandex.ru" target="_blank"><i class="bx bx-envelope"></i></a>
             </div>
