--- a/impact/negative-influence.html
+++ b/impact/negative-influence.html
@@ -31,12 +31,10 @@
                 <div class="blk-content">
                     <h1>Негативное влияние технологий на общество</h1>
                     <p>Как мы знаем, все, что есть на этой планете, имеет как преимущества, так и недостатки. То же самое касается и технологий, они также оказывают негативное влияние на общество, и вот некоторые другие негативные влияния:</p>
-                    <ul>
-                        <li>Рост безработицы: В настоящее время крупный и малый бизнес использует машины и техническое оборудование из-за их низкой себестоимости и высокой эффективности, в связи с чем уровень безработицы постоянно растет.</li>
-                        <li>Рост загрязнения: не только люди, но и технологии влияют на нашу окружающую среду. Из-за транспортных средств и машин уровень загрязнения постоянно увеличивается, что приводит к глобальному потеплению и т. д.</li>
-                        <li>Рост проблем со здоровьем и психических расстройств: В настоящее время технологии влияют на физическое и психическое здоровье людей. Они делают людей ленивыми, эмоционально слабыми, у них возникают проблемы со сном, снижается физическая активность, люди проводят меньше времени со своей семьей и друзьями.</li>
-                        <li>Рост киберпреступности: Из-за чрезмерного использования интернета также увеличивается уровень киберпреступности. Некоторые люди (злоумышленники) причиняют вред невинным людям (жертвам) или детям ради денег или развлечения.</li>
-                    </ul>
+                    <p><span>Рост безработицы:</span> В настоящее время крупный и малый бизнес использует машины и техническое оборудование из-за их низкой себестоимости и высокой эффективности, в связи с чем уровень безработицы постоянно растет.</p>
+                    <p><span>Рост загрязнения:</span> не только люди, но и технологии влияют на нашу окружающую среду. Из-за транспортных средств и машин уровень загрязнения постоянно увеличивается, что приводит к глобальному потеплению и т. д.</p>
+                    <p><span>Рост проблем со здоровьем и психических расстройств:</span> В настоящее время технологии влияют на физическое и психическое здоровье людей. Они делают людей ленивыми, эмоционально слабыми, у них возникают проблемы со сном, снижается физическая активность, люди проводят меньше времени со своей семьей и друзьями.</p>
+                    <p><span>Рост киберпреступности:</span> Из-за чрезмерного использования интернета также увеличивается уровень киберпреступности. Некоторые люди (злоумышленники) причиняют вред невинным людям (жертвам) или детям ради денег или развлечения.</p>
                     <p>Источник:&nbsp;<a href="https://www.geeksforgeeks.org/impact-of-technology-on-society/#:~:text=%D0%9D%D0%B5%D0%B3%D0%B0%D1%82%D0%B8%D0%B2%D0%BD%D0%BE%D0%B5%20%D0%B2%D0%BB%D0%B8%D1%8F%D0%BD%D0%B8%D0%B5%20%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B9%20%D0%BD%D0%B0%20%D0%BE%D0%B1%D1%89%D0%B5%D1%81%D1%82%D0%B2%D0%BE" target="_blank">Влияние технологий на общество</a></p>
                 </div>
                 <div class="pagination">
