--- a/impact/social-problems.html
+++ b/impact/social-problems.html
@@ -31,15 +31,13 @@
                 <div class="blk-content">
                     <h1>Социальные проблемы</h1>
                     <p>Ниже приведены некоторые социальные проблемы, с которыми мы сталкиваемся при использовании Интернета:</p>
-                    <ul>
-                        <li><b>Кража личных данных:</b> использование личных данных другого человека с целью получения его финансовой/личной информации мошенническим путем с целью совершения преступления.</li>
-                        <li><b>Игровая зависимость:</b> способность человека успешно действовать в различных сферах жизни серьезно страдает в результате чрезмерного использования интернет-игр в течение длительного периода времени.</li>
-                        <li><b>Здоровье и фитнес:</b> частое использование Интернета может повлиять на здоровье и физическую форму, а также на зрение, позвоночник и т. д.</li>
-                        <li><b>Кибербуллинг:</b> использование технологий для запугивания, оскорбления, критики или преследования другого человека называется кибербуллингом.</li>
-                        <li><b>Терроризм и преступность:</b> кража нашей киберинфраструктуры, а также цифровой информации, такой как программное обеспечение, оборудование, данные или информация, считается кибертерроризмом.</li>
-                        <li><b>Нарушение коммуникации:</b> нарушение коммуникации происходит, когда обмен информацией не происходит, что приводит к потере взаимодействия.</li>
-                        <li><b>Клевета:</b> акт передачи ложной информации с целью причинения серьезного вреда деловой репутации другого человека известен как клевета.</li>
-                    </ul>
+                    <p><span>Кража личных данных:</span> использование личных данных другого человека с целью получения его финансовой/личной информации мошенническим путем с целью совершения преступления.</p>
+                    <p><span>Игровая зависимость:</span> способность человека успешно действовать в различных сферах жизни серьезно страдает в результате чрезмерного использования интернет-игр в течение длительного периода времени.</p>
+                    <p><span>Здоровье и фитнес:</span> частое использование Интернета может повлиять на здоровье и физическую форму, а также на зрение, позвоночник и т. д.</p>
+                    <p><span>Кибербуллинг:</span> использование технологий для запугивания, оскорбления, критики или преследования другого человека называется кибербуллингом.</p>
+                    <p><span>Терроризм и преступность:</span> кража нашей киберинфраструктуры, а также цифровой информации, такой как программное обеспечение, оборудование, данные или информация, считается кибертерроризмом.</p>
+                    <p><span>Нарушение коммуникации:</span> нарушение коммуникации происходит, когда обмен информацией не происходит, что приводит к потере взаимодействия.</p>
+                    <p><span>Клевета:</span> акт передачи ложной информации с целью причинения серьезного вреда деловой репутации другого человека известен как клевета.</p>
                     <p>Источник:&nbsp;<a href="https://www.geeksforgeeks.org/impact-of-technology-on-society/#:~:text=%D0%B8%20%D0%BA%D1%83%D0%BB%D1%8C%D1%82%D1%83%D1%80%D0%BD%D1%8B%D0%B5%20%D0%B8%D0%B7%D0%BC%D0%B5%D0%BD%D0%B5%D0%BD%D0%B8%D1%8F-,%D0%A1%D0%BE%D1%86%D0%B8%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5%20%D0%BF%D1%80%D0%BE%D0%B1%D0%BB%D0%B5%D0%BC%D1%8B,-%D0%9D%D0%B8%D0%B6%D0%B5%20%D0%BF%D1%80%D0%B8%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D1%8B%20%D0%BD%D0%B5%D0%BA%D0%BE%D1%82%D0%BE%D1%80%D1%8B%D0%B5" target="_blank">Влияние технологий на общество</a></p>
                 </div>
                 <div class="pagination">
