--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
                 </div>
 
                 <div class="blk-content">
-                    <h1>Retro Tales - это проект о настольгии по Lorem ipsum dolor sit amet</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <h1>Retro Tales - это ностальгия по времени, когда современные технологии только входили в массовое пользование.</h1>
+                    <p>Проект представляет собой доработанное домашнее задание с курса по дизайну на тему "Брутализм".</p>
+                    <p>Стиль "Ретро брутализм" был выбран не случайно - это ностальгия по тем временам, когда начали появляться первые персональные компьютеры, когда синий экран был таким же обыденным, как белый фон браузера сейчас, и не имел тогда ещё за собой всем известный статус "Экран Смерти".</p>
+                    <p>Retro Tales - это небольшой блог, в котором собраны заметки об истории компьютерных игр, об эволюции ОС, приведены примеры самых культовых устройств и затронута очень важная тема о влиянии компьютеров на общество. Источники прилагаются.</p>
+                    <p>А где компьютерные игры, то там и музыка из этих игр. В правой колонке сверху я разместила небольшой плеер с известными треками. Есть перемотка как композиций между собой, так и внутри самого трека. Отмечу, что плеер работает локально на странице. При переходе на другую, прогресс текущего исполнения сбрасывается.</p>
+                    <p><span>Десктоп-версия.</span></p>
                 </div>
             </div>
         </div>
