--- a/contacts.html
+++ b/contacts.html
@@ -30,8 +30,14 @@
             
                 <div class="blk-content">
                     <h1>Список контактов</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Меня можно найти здесь:</p>
+                    <p><a href="https://golovina-wp.ru/" target="_blank">Сайт</a></p>
+                    <p>ВКонтакте:&nbsp;<a href="https://vk.com/golovina_wp" target="_blank">профиль</a></p>
+                    <p>Телеграм:&nbsp;<a href="https://t.me/golovina_wp" target="_blank">@golovina_wp</a></p>
+                    <p>Телеграм-канал:&nbsp;<a href="https://t.me/golovina_wp_channel" target="_blank">@golovina_wp_channel</a></p>
+                    <p>Сетка:&nbsp;<a href="https://set.ki/jvjPe8C" target="_blank">профиль</a></p>
+                    <p>Почта:&nbsp;<a href="mailto:golovina-wp@yandex.ru" target="_blank">golovina-wp@yandex.ru</a></p>
+                    <h2>Буду рада сотрудничеству!</h2>
                 </div>
             </div>
         </div>    
