--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="blk-content">
-                    <h1>Retro Tales - это ностальгия по времени, когда современные технологии только входили в массовое пользование.</h1>
+                    <h1>Retro Tales - это Брутализм, заметки и ретро</h1>
                     <p>Проект представляет собой доработанное домашнее задание с курса по дизайну на тему "Брутализм".</p>
                     <p>Стиль "Ретро брутализм" был выбран не случайно - это ностальгия по тем временам, когда начали появляться первые персональные компьютеры, когда синий экран был таким же обыденным, как белый фон браузера сейчас, и не имел тогда ещё за собой всем известный статус "Экран Смерти".</p>
                     <p>Retro Tales - это небольшой блог, в котором собраны заметки об истории компьютерных игр, об эволюции ОС, приведены примеры самых культовых устройств и затронута очень важная тема о влиянии компьютеров на общество. Источники прилагаются.</p>
